--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -111,6 +111,19 @@
   margin-left: 0.5rem;
 }
 
+.viewer {
+  padding: 0 12rem;
+}
+
+.pageBackground {
+  /* position: absolute, */
+  /* minWidth: 100%,
+  minHeight: 100%, */
+  /* display: block, */
+  min-height: 100vh;
+  max-height: 100vh;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
