--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
- */
+
 
 /* html,
 body {
@@ -19,3 +19,4 @@ a {
 * {
   box-sizing: border-box;
 } */
+
