--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-/* html,
+html,
 body {
   padding: 0;
   margin: 0;
@@ -18,5 +13,5 @@ a {
 
 * {
   box-sizing: border-box;
-} */
+}
 
