--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,16 @@ a {
   max-height: 100vh;
   overflow: auto;
 }
+
+/* ModalBackdrop */
+.ModalBackdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #000000e1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
